# fastapi

./: .env.example  .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
docker/: app.Dockerfile  development.Dockerfile
docker/data/: postgres-init.sql
src/: .dockerignore  .env.example  Pipfile  pyproject.toml
src/app/: dependencies.py  main.py  settings.py
src/app/controllers/: auth.py  responses.py  users.py
src/app/libs/crypt/: crypt.py  schemas.py
src/app/libs/responses/: responses.py  schemas.py
src/app/routers/: auth.py  dependencies.py  users.py
src/app/schemas/: crypt.py  responses.py  users.py
src/app/services/: crypt.py  db_interface.py  users.py
src/app/storage/: data_interface.py  database.py  models.py
src/tests/: dependencies.py  test_api.py  test_users.py
src/tests/tests_integration/: test_users.py
src/tests/tests_unit/: test_crypt.py
